# WealthOps

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: implementer.md  reviewer.md
.claude/commands/: auto-build.md  brainstorm.md  build.md  debug.md  kickoff.md  quick.md
.claude/hooks/: hooks.json
.claude/rules/: backtest.md  data.md  src.md  tests.md
.claude/skills/wealthops-module/: SKILL.md
.github/workflows/: ci.yml  publish.yml
data/calendars/: economic_calendar.json
deploy/: crontab.example  eventbridge.json  wealthops-bot.service
deploy/lambda/: Dockerfile  handler.py
docs/: Architecture.md  PROGRESS.md  coding-standards.md  phase1-plan.md
docs/explanations/: phase1-teaching-guide.md
docs/plans/: backtest-engine.plan.md  data-pipeline.plan.md  guard-system.plan.md  indicators-composite.plan.md  packaging-deployment.plan.md  signal-generation.plan.md  walk-forward-validation.plan.md
docs/strategy/: phase1-plan.md
scripts/: backtest_xauusd.py  bootstrap_data.py  verify_indicators.py
src/trading_advisor/: __init__.py  cli.py  config.py  exceptions.py  health.py  logging.py  runner.py
src/trading_advisor/backtest/: __init__.py  engine.py  go_nogo.py  report.py  sensitivity.py  validation.py
src/trading_advisor/data/: __init__.py  base.py  fred.py  ingest.py  tiingo.py  validation.py
src/trading_advisor/guards/: __init__.py  base.py  drawdown_gate.py  event_guard.py  macro_gate.py  pipeline.py  pullback_zone.py  trend_gate.py
src/trading_advisor/indicators/: __init__.py  composite.py  technical.py
src/trading_advisor/notifications/: __init__.py  bot.py  commands.py  formatters.py  signal_store.py  telegram.py
src/trading_advisor/portfolio/: __init__.py  manager.py
src/trading_advisor/storage/: __init__.py  base.py  local.py  s3.py
src/trading_advisor/strategy/: __init__.py  base.py  orders.py  scan.py  signal.py  sizing.py  swing_sniper.py
tests/: conftest.py  test_backtest_costs.py  test_backtest_engine.py  test_backtest_exits.py  test_backtest_go_nogo.py  test_backtest_metrics.py  test_backtest_report.py  test_backtest_sensitivity.py  test_backtest_types.py  test_backtest_validation.py  test_bot.py  test_commands.py  test_composite.py  test_config.py  test_formatters.py  test_fred.py  test_guards.py  test_health.py  test_indicators.py  test_ingest.py  test_notifications.py  test_orders.py  test_portfolio.py  test_s3_storage.py  test_scan.py  test_signal_dataclass.py  test_signal_store.py  test_signals.py  test_sizing.py  test_storage.py  test_swing_sniper.py  test_tiingo.py  test_validation.py
tests/integration/: test_backtest_integration.py  test_guard_integration.py  test_telegram_integration.py
tests/unit/: test_exceptions.py  test_logging.py
