[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wealthops"
version = "0.1.0"
description = "Gold swing trading advisory bot — monitors XAU/USD momentum, checks safety guards, sends trade signals via Telegram."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Radwan" }]
keywords = [
  "trading",
  "algorithmic-trading",
  "gold",
  "xauusd",
  "telegram",
  "momentum",
  "swing-trading",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.26",
  "pyarrow>=14.0",
  "requests>=2.31",
  "python-dotenv>=1.0",
  "fredapi>=0.5",
  "python-telegram-bot>=21.0",
  "click>=8.1",
  "matplotlib>=3.8",
  "plotly>=5.18",
  "pandera>=0.18",
]

[project.optional-dependencies]
aws = ["boto3>=1.34"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "pre-commit>=3.7",
  "mypy>=1.9",
  "build>=1.2",
  "twine>=5.0",
  "types-requests>=2.31",
  "pandas-stubs>=2.0",
]

[project.urls]
Homepage = "https://github.com/mrdwan/wealthops"
Repository = "https://github.com/mrdwan/wealthops"
"Bug Tracker" = "https://github.com/mrdwan/wealthops/issues"

[project.scripts]
wealthops = "trading_advisor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_advisor"]

# ---------------------------------------------------------------------------
# Ruff — linting + formatting (replaces flake8 + isort + black)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
]
ignore = [
  "B008", # do not perform function calls in default arguments
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-report=html -v"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "src/trading_advisor/runner.py", "src/trading_advisor/cli.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0  # Set to 80 once Task 1A is done

# ---------------------------------------------------------------------------
# Mypy — strict type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "pytest-mock>=3.15.1",
]
